# PSEC

./: .coverage  .env  .gitignore  LICENCE.md  PSEC.code-workspace  README.md  Safecor.code-workspace  coverage.rc
python/demo2/: README.md  pyproject.toml
python/demo2/src/demo2/: AppController.py  Composant1.py  Composant2.py  MessagesFactory.py  MockDom0Controller.py  MockSysUsbController.py  Topics.py  main.py  start.sh
python/demo2/src/demo2/qml/: MainScreen.qml  MainScreenUi.ui.qml  main.qml
python/demo2/src/demo2/qml/Components/: RectangleValeur.qml
python/diag/: README.md  pyproject.toml
python/diag/src/diag/: AppController.py  DiskModel.py  DiskProxyModel.py  InterfaceInputs.py  InterfaceSocle.py  MockXenbus.py  MousePointer.py  README.md  compile-resource.sh  main.py  psec-diag.qmlproject  ressources.qrc  ressources_rc.py  start.sh  test_wheel.py
python/diag/src/diag/deprecated/: InterfaceInputs.py  MousePointer.py  PanneauDisques.qml  test_wheel.py
python/diag/src/diag/qml/: BenchmarkPanel.qml  CompatibilityPanelUi.ui.qml  DisksList.qml  EcranPrincipal.ui.qml  FilesList.qml  FilesListUi.ui.qml  Group.ui.qml  HardwareCapabilities.qml  MainScreen.ui.qml  PanneauDepot.qml  PanneauDepotUi.ui.qml  PanneauDisques.qml  PanneauDisquesUi.ui.qml  PanneauFichiers.qml  PanneauInputs.qml  PanneauInputsUi.ui.qml  SecurityCapabilities.qml  StoragePanel.qml  StoragePanelUi.ui.qml  main.qml
python/diag/src/diag/qml/Components/: PCapability.qml  qmldir
python/diag/src/psec_diag/: DiskModel.py
python/lib/: LICENCE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/lib/docs/source/: conf.py  index.rst  psec.rst
python/lib/docs/source/_static/: custom.css
python/lib/docs/source/api/: index.rst  psec.rst  safecor.rst
python/lib/docs/source/markdown/: architecture.md  boot-usb.md  debugging.md  development.md  documentation.md  hardening.md  index.rst  integration.md  logging.md  protocol.md  provisioning.md  roles.md  support-infrastructure.md  tested-hardware.md  topology.md  update-alpine-mirror.md
python/lib/scripts/: print_pythonpath.py
python/lib/src/: .coverage
python/lib/src/psec/: __init__.py  _api.py  _api_helper.py  _commande.py  _commande_factory.py  _components_helper.py  _configuration_reader.py  _constantes.py  _constants.py  _controleur_benchmark.py  _controleur_dom0.py  _controleur_vm_sys_usb.py  _debugging.py  _demon_inputs.py  _demon_proxyjournal.py  _disk_monitor.py  _dom0_controller.py  _erreur_factory.py  _fichier_helper.py  _inputs_daemon.py  _inputs_proxy.py  _journalisation.py  _journalisation.py.orig  _keymap_fr.py  _logger.py  _message_helper.py  _messagerie_dom0.py  _messagerie_domu.py  _mock_sys_usb_controller.py  _mock_xenbus.py  _mouse.py  _mqtt_client.py  _mqtt_factory.py  _notification_factory.py  _notification_helper.py  _parametres.py  _reponse.py  _reponse_factory.py  _request_factory.py  _response_factory.py  (+10 more)
python/lib/src/psec/deprecated/: _debug.py  _event_factory.py  _message.py  _message_helper.py  _messagerie_dom0.py  _messagerie_domu.py  _mock_xenbus.py  _notification.py  _notification_helper.py  _parameters.py  _parametres.py  _type_commande.py  _virtual_inputs.py
python/lib/src/safecor/: __init__.py  _api.py  _api_helper.py  _components_helper.py  _configuration_reader.py  _constants.py  _debugging.py  _disk_monitor.py  _dom0_controller.py  _file_helper.py  _inputs_daemon.py  _keymap_fr.py  _libvirt_helper.py  _logger.py  _mock_sys_usb_controller.py  _mouse.py  _mqtt_client.py  _mqtt_factory.py  _mqtt_helper.py  _notification_factory.py  _request_factory.py  _response_factory.py  _singleton.py  _sys_usb_controller.py  _system.py  _tasks_runner.py  _topics.py  _topology.py
python/lib/src/tests/: _test_with_api.py  test_api_helper.py  test_component_helper.py  test_disk_monitor.py  test_libvirt_helper.py  test_logger.py  test_mouse.py  test_mqtt.py  test_notification_factory.py  test_topology.py
python/lib/tests/: benchmark_channel.py  configtest.conf  test_component_helper.py  test_debugger.py  test_fichiers_helper.py  test_inputs.py  test_journalisation.py  test_logger.py  test_messagerie.py  test_messagerie_dom0.py  test_messagerie_domu.py  test_mqtt.py  test_parametres.py  test_serialize.py  test_surveillance_disque.py  tests.py
python/tests/: README.md  pyproject.toml
python/tests/src/tests/: README.md  app_controller.py  enums.py  main.py  messages_listmodel.py  requirements.txt  start.sh  tests_helper.py  tests_listmodel.py
python/tests/src/tests/TestPackages/Debug/: test_serial_port.py
python/tests/src/tests/TestPackages/Input/: test_keyboard.py  test_mouse.py  test_special_buttons.py
python/tests/src/tests/TestPackages/Storage/: test_get_file.py  test_get_repository_files_list.py  test_get_storages_list.py  test_multiple_partitions.py  test_write_files.py
python/tests/src/tests/TestPackages/System/: test_create_file_in_repository.py  test_delete_file_from_repository.py  test_logging.py  (+4 more)
python/tests/src/tests/lib/: __init__.py  _abstract_test.py
python/tests/src/tests/mocks/: DevModeHelper.py  MockDom0Controller.py  start_mocks.py
python/tests/src/tests/qml/: Tests.qmlproject  Tests.qrc
(+104 files in other folders)
