[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psec"
version = "1.0"
authors = [ 
    { name="Tristan Israël", email="tristan.israel@alefbet.net" }, 
]
description = "PSEC python library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pyserial",
    "joblib",
    "humanize",
    "paho-mqtt>=2.0.0",
    "pyudev",
    "msgpack"
]

[project.urls]
Homepage = "https://github.com/tibsys/psec"
Issues = "https://github.com/tibsys/psec/issues"

[tool.sphinx]
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.napoleon",
  "sphinx.ext.viewcode",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
sphinx-rtd-theme = "^2.0"
sphinx-autobuild = "^2024.0"