[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safecor"
version = "1.2.0"
authors = [ 
    { name="Tristan Israël", email="tristan.israel@alefbet.net" }, 
]
description = "Safecor python library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pyserial",
    "joblib",
    "humanize",
    "paho-mqtt>=2.0.0",
    "pyudev",
    "msgpack"
]

[project.urls]
Homepage = "https://github.com/TristanIsrael/Safecor"
Issues = "https://github.com/TristanIsrael/Safecor/issues"

[tool.sphinx]
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.napoleon",
  "sphinx.ext.viewcode",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
sphinx-rtd-theme = "^2.0"
sphinx-autobuild = "^2024.0"

[tool.poetry]
name = "safecor"
version = "1.2.0"
description = "Safecor python package"
authors = ["Tristan ISRAËL <tristan.israel@alefbet.net>"]
packages = [
    { include = "safecor", from = "src" }
]

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "I", "B"]