[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tests"
version = "1.0"
authors = [ 
    { name="Tristan Israël", email="tristan.israel@alefbet.net" }, 
]
description = "Test application for Safecor"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/TristanIsrael/Safecor"
Issues = "https://github.com/TristanIsrael/Safecor/issues"